{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 324,
  "lineage": "71d4a092-1aaa-ed09-cbb2-fb086ac939c8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-1:829838679236:loadbalancer/app/incode-load-balancer/57a2af3abd88be6e",
            "arn_suffix": "app/incode-load-balancer/57a2af3abd88be6e",
            "desync_mitigation_mode": "defensive",
            "dns_name": "incode-load-balancer-2141945483.us-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-west-1:829838679236:loadbalancer/app/incode-load-balancer/57a2af3abd88be6e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "incode-load-balancer",
            "security_groups": [
              "sg-0f50f634ccbe64633"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0929c4328477002ba"
              },
              {
                "subnet_id": "subnet-0f7afb2ae557042f3"
              }
            ],
            "subnets": [
              "subnet-0929c4328477002ba",
              "subnet-0f7afb2ae557042f3"
            ],
            "tags_all": {
              "Environment": "dev",
              "Managed by": "Terraform",
              "Region": "us-west-1"
            },
            "vpc_id": "vpc-0f7cb8dfd72c3862c",
            "zone_id": "Z368ELLRRE2KJ0"
          },
          "dependencies": [
            "aws_security_group.lb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-1:829838679236:listener/app/incode-load-balancer/57a2af3abd88be6e/6ef9e7cc83bf98f3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:829838679236:targetgroup/incode-target-group/3d49fc4b800d5dea",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:829838679236:listener/app/incode-load-balancer/57a2af3abd88be6e/6ef9e7cc83bf98f3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-1:829838679236:loadbalancer/app/incode-load-balancer/57a2af3abd88be6e",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "Managed by": "Terraform",
              "Region": "us-west-1"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.main",
            "aws_alb_target_group.app",
            "aws_security_group.lb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:829838679236:targetgroup/incode-target-group/3d49fc4b800d5dea",
            "arn_suffix": "targetgroup/incode-target-group/3d49fc4b800d5dea",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:829838679236:targetgroup/incode-target-group/3d49fc4b800d5dea",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "incode-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Environment": "dev",
              "Managed by": "Terraform",
              "Region": "us-west-1"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0f7cb8dfd72c3862c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "natgweIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-042ea9d4ec2a1e88b",
            "domain": "vpc",
            "id": "eipalloc-042ea9d4ec2a1e88b",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-54-241-124-148.us-west-1.compute.amazonaws.com",
            "public_ip": "54.241.124.148",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-006bf28a735f59fca",
            "domain": "vpc",
            "id": "eipalloc-006bf28a735f59fca",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-54-241-80-45.us-west-1.compute.amazonaws.com",
            "public_ip": "54.241.80.45",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:829838679236:internet-gateway/igw-093c83efa8817777d",
            "id": "igw-093c83efa8817777d",
            "owner_id": "829838679236",
            "tags_all": {
              "Environment": "dev",
              "Managed by": "Terraform",
              "Region": "us-west-1"
            },
            "vpc_id": "vpc-0f7cb8dfd72c3862c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-042ea9d4ec2a1e88b",
            "connectivity_type": "public",
            "id": "nat-01293b75eaa488801",
            "network_interface_id": "eni-0f063edffd83b14b3",
            "private_ip": "172.17.2.155",
            "public_ip": "54.241.124.148",
            "subnet_id": "subnet-0929c4328477002ba",
            "tags_all": {
              "Environment": "dev",
              "Managed by": "Terraform",
              "Region": "us-west-1"
            }
          },
          "dependencies": [
            "aws_eip.natgweIP",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-006bf28a735f59fca",
            "connectivity_type": "public",
            "id": "nat-09dd99f14123c163e",
            "network_interface_id": "eni-057f42e55a81bb8de",
            "private_ip": "172.17.3.73",
            "public_ip": "54.241.80.45",
            "subnet_id": "subnet-0f7afb2ae557042f3",
            "tags_all": {
              "Environment": "dev",
              "Managed by": "Terraform",
              "Region": "us-west-1"
            }
          },
          "dependencies": [
            "aws_eip.natgweIP",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-093c83efa8817777d",
            "id": "r-rtb-0cb9e69c5c37982201080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cb9e69c5c3798220",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:829838679236:route-table/rtb-02bd80ee8f839691d",
            "id": "rtb-02bd80ee8f839691d",
            "owner_id": "829838679236",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01293b75eaa488801",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "Managed by": "Terraform",
              "Region": "us-west-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f7cb8dfd72c3862c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.natgweIP",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.natgw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:829838679236:route-table/rtb-0466908898c820180",
            "id": "rtb-0466908898c820180",
            "owner_id": "829838679236",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09dd99f14123c163e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "Managed by": "Terraform",
              "Region": "us-west-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f7cb8dfd72c3862c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.natgweIP",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.natgw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03c787b1ff558c979",
            "route_table_id": "rtb-02bd80ee8f839691d",
            "subnet_id": "subnet-081ac742fadb818f8"
          },
          "dependencies": [
            "aws_eip.natgweIP",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.natgw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-015e3aa9bc7d9e28f",
            "route_table_id": "rtb-0466908898c820180",
            "subnet_id": "subnet-0155e750c1e612f72"
          },
          "dependencies": [
            "aws_eip.natgweIP",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.natgw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:829838679236:security-group/sg-0c29b3016fe7bdd62",
            "description": "allow inbound access from the ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c29b3016fe7bdd62",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f50f634ccbe64633"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "incode-ecs-tasks-security-group",
            "name_prefix": "",
            "owner_id": "829838679236",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "Managed by": "Terraform",
              "Region": "us-west-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f7cb8dfd72c3862c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:829838679236:security-group/sg-0f50f634ccbe64633",
            "description": "controls access to the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f50f634ccbe64633",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "incode-load-balancer-security-group",
            "name_prefix": "",
            "owner_id": "829838679236",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "Managed by": "Terraform",
              "Region": "us-west-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f7cb8dfd72c3862c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:829838679236:subnet/subnet-081ac742fadb818f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "172.17.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-081ac742fadb818f8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "829838679236",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Environment": "dev",
              "Managed by": "Terraform",
              "Region": "us-west-1"
            },
            "vpc_id": "vpc-0f7cb8dfd72c3862c"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:829838679236:subnet/subnet-0155e750c1e612f72",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "172.17.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0155e750c1e612f72",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "829838679236",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Environment": "dev",
              "Managed by": "Terraform",
              "Region": "us-west-1"
            },
            "vpc_id": "vpc-0f7cb8dfd72c3862c"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:829838679236:subnet/subnet-0929c4328477002ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "172.17.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0929c4328477002ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "829838679236",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Environment": "dev",
              "Managed by": "Terraform",
              "Region": "us-west-1"
            },
            "vpc_id": "vpc-0f7cb8dfd72c3862c"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:829838679236:subnet/subnet-0f7afb2ae557042f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "172.17.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f7afb2ae557042f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "829838679236",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Environment": "dev",
              "Managed by": "Terraform",
              "Region": "us-west-1"
            },
            "vpc_id": "vpc-0f7cb8dfd72c3862c"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:829838679236:vpc/vpc-0f7cb8dfd72c3862c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.17.0.0/16",
            "default_network_acl_id": "acl-05e7d253029021ec9",
            "default_route_table_id": "rtb-0cb9e69c5c3798220",
            "default_security_group_id": "sg-02d367d980388ec5a",
            "dhcp_options_id": "dopt-0fac80bcdbb5a3a0d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0f7cb8dfd72c3862c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cb9e69c5c3798220",
            "owner_id": "829838679236",
            "tags_all": {
              "Environment": "dev",
              "Managed by": "Terraform",
              "Region": "us-west-1"
            }
          }
        }
      ]
    }
  ]
}